changed sessions back to being stored in the db. also fixed a small UI bug on firefox associated with padding of the login box on the homepage.

--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -814,7 +814,7 @@ p a#next-link:hover { background-position: -332px -227px; }
 	border: solid 15px;
 	vertical-align:top;
 	margin: 20px 20px 0px 0px;
-	padding: 10px 10px 0px 10px;
+	padding: 10px 10px;
 }
 
 .sign-up {
